2006-05-19  Paul J Stevens <paul@nfg.nl>

	* acl.c, db.c, db.h, debian/changelog, imapcommands.c:
	add mailbox_is_writable to acl_hasright (bug: #298)
	* check_dbmail.h, check_dbmail_imapd.c, dm_imaputil.c, dm_imaputil.h:
	work around parsing of broken addresses in envelope code
	* modules/dbpgsql.c:
	fix memleak (closes: #350)
	* dbmail-message.c:
	do crlf-dot-crlf decoding on lmtp stream (closes: #349)

2006-05-18  Paul J Stevens <paul@nfg.nl>

	* db.c, test-scripts/testimap.py:
	fix lsub
	* dbmail-mailbox.c:
	fix imap search without sequence set

2006-05-17  Paul J Stevens <paul@nfg.nl>

	* debian/control:
	update debian depends
	* check_dbmail_imapd.c, serverchild.c:
	fix a couple of minor compiler warnings
	* debian/default.dbmail:
	disable startup of timsieved by default in debian scripts
	* sql/sqlite/create_tables.sqlite:
	partial finish of sqlite create_tables
	* dm_imaputil.c:
	tweak escaping of from in envelope

2006-05-13  Aaron Stone  <aaron@serendipity.cx>

	* acinclude.m4, authmodule.c, dbmodule.c, sortmodule.c:
	Use the --prefix or its default to find the loadable modules.
	* dbmail-imapsession.c, dbmail-messageg.c:
	Applied a memory leak patch by Leif Jackson.

2006-05-12  Aaron Stone  <aaron@serendipity.cx>

	* sievecmd.h, sievecmd.h:
	Various improvements and updates to bring dbmail-sievecmd in line with
	the other command line tools. Inserting a script from a file now
	works (closes bug #346).
	* check_dbmail_imapd.c:
	Added testcase for dbmail_imap_session_prompt and functions to create
	a temporary fifo to simulate a network connection.

2006-05-10  Paul J Stevens <paul@nfg.nl>

	* debug.c:
	cut down the number of strlen calls
	* THANKS:
	thank metaways for helping out on solaris
	* dm_imaputil.c, test-scripts/testimap.py:
	fix string quoting and encoding in message-id and content-disposition
	atoms

2006-05-09  Paul J Stevens <paul@nfg.nl>

	* debug.c:
	replace vsyslog with g_strdup_vprintf to placate solaris
	* dbmail-imapsession.c: